base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
  labels:
    glop.pasglop.environment: CHANGEME
  name: CHANGEME
spec:
